Kejun (#2)
* complete diff types of general purpose registers

* fix for axi4 after optimization

* support both Split and Templocal, bench file generation, verilog generation

* support the option to do simulation and verilog generation

* support verilog generation in AnvilTest

* fix for testOnly

* Added Java 17 installation.

---------

Co-authored-by: Robby <robby@santoslab.org>